# PolarisEngine

./: .gitignore  LICENSE  gen_project.bat
engine/: CMakeLists.txt  cmakelists.txt  xmake.lua
engine/benchmark/: CMakeLists.txt  bm_container.cpp  xmake.lua
engine/cmake/: add_dependency.cmake  build_target.cmake  compile_meta_object.cmake  conan.cmake  detect_feature.cmake  find_ispc.cmake  find_llvm.cmake  ispc_compile.cmake  shader_compile.cmake  utils.cmake
engine/extra/debug_visualization/: pl_engine.natvis
engine/shader/: CMakeLists.txt  shader.vert
engine/source/: CMakeLists.txt  xmake.lua
engine/source/app/: CMakeLists.txt  application_base.hpp  defination_app.hpp  definitions_app.hpp  main.cpp  platform_application.hpp  xmake.lua
engine/source/app/app/: application.hpp
engine/source/app/app/details/: app_driver.cpp  app_driver.hpp  application.cpp
engine/source/app/details/: application_base.cpp  definitions_app.cpp
engine/source/app/include/: platform_application.hpp
engine/source/app/src/: app_log.hpp
engine/source/core/: CMakeLists.txt  cmakelists.txt  core_minimal_private.hpp  core_minimal_public.hpp  core_module.hpp  definitions_core.cpp  definitions_core.hpp  precompiled_core.hpp  xmake.lua
engine/source/core/file_system/: file_handle_interface.hpp  file_system.hpp  file_system_type.hpp  file_time.hpp  path.hpp  platform_file_interface.hpp
engine/source/core/foundation/: array.hpp  bit_array.hpp  char.hpp  char_traits.hpp  char_utils.hpp  delegate.hpp  dynamic_array.hpp  encoding.hpp  fix_string.hpp  fixed_string.hpp  list.hpp  map.hpp  queue.hpp  set.hpp  smart_ptr.hpp  sparse_array.hpp  stack.hpp  stl_misc.hpp  string.hpp  string_cast.hpp  string_type.hpp  string_view.hpp  time.hpp  tuple.hpp  type_traits.hpp  uchar.hpp  ustring.hpp
engine/source/core/global/: prerequisite.hpp
engine/source/core/include/: core_minimal_public.hpp  precompiled_core.hpp
engine/source/core/log/: logger.hpp
engine/source/core/math/: align_utils.hpp  city_hash.cpp  city_hash.hpp  generic_math.hpp  hash_helper.hpp  limit.hpp
engine/source/core/memory/: allocator_policies.hpp  ansi_c_malloc.hpp  binned_malloc.hpp  heap_allocator.hpp  malloc_base.hpp  malloc_c.hpp  malloc_interface.hpp  memory.hpp  override_new_delete.hpp  platform_memory.hpp  system_new_delete_object.hpp
engine/source/core/misc/: type_auto_register.hpp  type_hash.hpp
engine/source/core/module/: module_interface.hpp  module_manager.hpp
engine/source/core/predefine/: common_marco.hpp  platform.hpp  prerequisite.hpp
engine/source/core/reflection/: field.hpp  meta_object.hpp  meta_property.hpp  method.hpp  param.hpp  reflection_macro.hpp  reflection_system.hpp  set_type.hpp  structure.hpp  variant.hpp
engine/source/core/src/: definitions_core.cpp
engine/source/core/thread/: platform_tls.hpp
engine/source/core/windows/: minimal_windows.hpp  windows_file_handle.hpp  windows_platform.hpp  windows_platform_file.hpp  windows_platform_string.hpp
engine/source/launcher/: CMakeLists.txt  engine_loop.hpp  main.cpp  xmake.lua
engine/source/launcher/details/: engine_loop.cpp
engine/source/object/: CMakeLists.txt
engine/source/object/include/: definitions_object.hpp  meta_attributes.hpp  meta_construct_utils.hpp  meta_enum.hpp  meta_field.hpp  meta_macro.hpp  meta_method.hpp  meta_object.hpp  meta_property.hpp  meta_structure.hpp  meta_type.hpp  meta_types.hpp  object.hpp  object_module.hpp  object_register.hpp  variant.hpp
engine/source/object/src/: meta_enum.cpp  meta_object.cpp  meta_type.cpp  object.cpp  object_module.cpp  object_register.cpp  variant.cpp
engine/source/render/: CMakeLists.txt  defination_render.hpp  definitions_render.hpp  render_module.hpp  xmake.lua
engine/source/render/details/: render_module.cpp
engine/source/render/include/: render_module.hpp
engine/source/render/rhi/: dynamic_rhi.hpp
engine/source/render/src/: definitions_render.cpp  render_log.hpp
engine/source/taskflow/: CMakeLists.txt
engine/source/taskflow/include/: Graph.hpp  Task.hpp  Taskflow.hpp  definitions_taskflow.hpp  graph.hpp  graph_node.hpp  graph_task.hpp  task.hpp  task_executor.hpp  taskflow.hpp
engine/source/taskflow/src/: Graph.cpp  GraphNode.cpp  Taskflow.cpp  completed_graph_task.cpp  completed_graph_task.hpp  graph.cpp  graph_node.cpp  graph_task.cpp  task_executor.cpp  task_executor.hpp  taskflow.cpp
engine/test/: CMakeLists.txt  xmake.lua
engine/test/core_test/: CMakeLists.txt  container_test.cpp  core_test_main.cpp  math_test.cpp  misc_test.cpp  mos_test.cpp  mos_test_header.hpp  refl_test.cpp  reflect_class.cpp  reflect_class.hpp  tuple_test.cpp  xmake.lua
engine/test/object_test/: CMakeLists.txt  meta_test.cpp
engine/test/taskflow_test/: CMakeLists.txt  task_test.cpp
engine/third_parties/benchmark/debug/: benchmark_main.lib
engine/third_parties/benchmark/release/: benchmark.lib  benchmark_main.lib
engine/tools/: CMakeLists.txt
engine/tools/feature_detector/: CMakeLists.txt  feature_detector.cpp
engine/tools/meta_object_compiler/: CMakeLists.txt  build_targets.cpp  build_targets.hpp  class_unit.cpp  class_unit.hpp  code_generator_interface.hpp  code_writer.cpp  code_writer.hpp  enum_unit.cpp  enum_unit.hpp  mata_parser.cpp  meta_code_generator.cpp  meta_code_generator.hpp  meta_data_types.hpp  meta_parser.hpp  method_unit.cpp  method_unit.hpp  moc_log.hpp  moc_main.cpp  parse_unit.cpp  parse_unit.hpp  parse_utils.cpp  parse_utils.hpp  precompile.hpp  property_unit.cpp  property_unit.hpp  struct_unit.cpp  struct_unit.hpp
engine/tools/meta_object_compiler/include/: attribute_types.hpp  class_unit.hpp  enum_unit.hpp  meta_parser.hpp  meta_unit.hpp  method_unit.hpp  parse_utils.hpp  property_unit.hpp
engine/tools/meta_object_compiler/src/: attribute_types.cpp  class_unit.cpp  enum_unit.cpp  mata_parser.cpp  meta_unit.cpp  method_unit.cpp  parse_utils.cpp  property_unit.cpp
engine/tools/prebuild_tool/: CMakeLists.txt  main.cpp
engine/tools/prebuild_tool/parser/: cursor.hpp  parser_manager.hpp  reflection_unit.hpp  structure_parser.hpp
(+224 files in other folders)
